# tease

./: README.md  objects.txt  start.sh
RepoService/: .env  db-compose.yml  go.mod  go.sum  main.go
StatsService/: .env  db-compose.yml  go.mod  go.sum  main.go
UserService/: .env  db-compose.yml  go.mod  go.sum  main.go
storage_service/: Cargo.toml
storage_service/src/: can_push.rs  clone.rs  file_utils.rs  has_access.rs  init.rs  jwt.rs  main.rs  pull.rs  push.rs  what_to_pull.rs  zip_utils.rs
storage_service/src/controllers/: can_push.rs  clone.rs  diff.rs  has_access.rs  mod.rs  push.rs  read.rs  what_to_pull.rs
tease_cli/: Cargo.toml  go_back  install.sh
tease_cli/src/: main.rs
tease_cli/src/commands/: add.rs  branch.rs  clone.rs  command_enum.rs  commit.rs  create.rs  diff.rs  goback.rs  init.rs  merge.rs  mod.rs  pull.rs  push.rs  read.rs  reset.rs  set_origin.rs  set_user.rs  status.rs
tease_cli/src/index_structs/: commit.rs  index.rs  index_tree.rs  mod.rs
tease_cli/src/merge_utils/: merge_file.rs  mod.rs
tease_cli/src/remote_req/: can_push.rs  clone_branch.rs  get_clone.rs  login.rs  mod.rs  post_init.rs  post_pull.rs  post_push.rs  push.rs  what_to_pull.rs
tease_cli/src/remote_req/requests/: can_push.rs  init.rs  login.rs  mod.rs  pull.rs  what_to_pull.rs
tease_cli/src/remote_req/responses/: can_push.rs  init.rs  login.rs  mod.rs  what_to_pull.rs
tease_cli/src/utils/: blob_writer.rs  glob.rs  lines.rs  mod.rs
tease_common/: Cargo.toml
tease_common/src/: common_structs.rs  diff.rs  lib.rs  lines.rs  zip_utils.rs
tease_common/src/read/: blob_reader.rs  diff.rs  lines.rs  mod.rs
tease_common/src/write/: bolb_writer.rs  mod.rs
(+122 files in other folders)
