[package]
name = "storage_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
zip = "0.6.2"
jsonwebtoken = "8.1.1"
serde = "1.0.130"
reqwest = {version = "0.11.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tease_common = { path = "../tease_common" }
glob = "0.3.0"
itertools = "0.10.3"
