[package]
name = "tease_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.1"
flate2 = "1.0.24"
bincode = "1.3.3"
serde = { version = "1.0.139", features = ["derive"] }
glob = "0.3.0"